syntax = "proto2";

package proto_builder.tests;

import "proto_builder/proto_builder.proto";

message Interface {
  option (proto_builder.message) = {
    base_class: "public InterfaceBase<{{CLASS_NAME}}, {{INTERFACE_NAME}}<{{CLASS_NAME}}>>"
    builder_include: "proto_builder/tests/interface_util.h"
  };

  optional string first_name = 1;
  optional string last_name = 2;
}
